--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "messenger-bot": "^2.4.0",
+    "node-wit": "^4.1.0",
     "request": "^2.74.0"
   }
 }
