--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "messenger-bot": "^2.4.0",
