--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adam Jodlowski",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "dotenv": "^2.0.0",
