--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testbot",
+  "name": "protons-messenger-bot",
   "version": "1.0.0",
   "description": "TestBot Server App",
   "main": "index.js",
@@ -7,17 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Adam Jodlowski",
-  "license": "ISC",
+  "author": "Youssefe.fares",
+  "license": "MIT",
   "dependencies": {
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
+    "mocha": "3.2.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "messenger-bot": "^2.4.0",
-    "node-wit": "^4.1.0",
-    "redis": "^2.6.3",
-    "request": "^2.74.0"
+    "wit-messenger-bot": "^1.0.1",
+    "request": "^2.81.0"
   }
 }
